<resources>
    <string name="app_name">IMC_app</string>
    <string name="app_title">IMC Calculator</string>
    <string name="home">Home</string>
    <string name="dona">Dona</string>

    <string name="pes">Height</string>
    <string name="height_format">%1$d inches</string>
    <string name="weight">Weight</string>

    <string name="weight_default">170</string>
    <string name="inches">inches</string>
    <string name="age_default">18</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="age">age</string>
    <string name="calculate">calculate</string>
    <string name="inches_default">70</string>
    <string name="bmi_results">BMI Results</string>
    <string name="your_results">Your Results</string>
    <string name="re_calculate">re-calculate</string>
    <string name="bajo_peso">Delgado</string>
    <string name="normal">Normal</string>
    <string name="sobrepeso">Sobrepeso</string>
    <string name="obesidad">Obesidad</string>

</resources>