<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainActivity"
    android:paddingTop="10dp"
    android:background="@color/fons">

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        android:paddingBottom="20dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMale"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cvFemale"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        app:layout_constraintBottom_toTopOf="@+id/cvHeight"
        app:cardCornerRadius="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >
        <LinearLayout
            android:id="@+id/llMale"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:background="@color/card"
            android:gravity="center"
            >
            <ImageView
                android:contentDescription="@string/home"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_male"
                app:tint="@color/white"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textColor="@color/textColor"
                android:layout_marginTop="20dp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvFemale"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@+id/cvMale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHeader"
        app:layout_constraintBottom_toTopOf="@+id/cvHeight"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"

        app:cardCornerRadius="16dp"
        android:layout_marginBottom="20dp"

        >
        <LinearLayout
            android:id="@+id/llFemale"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:background="@color/card"
            android:gravity="center"
            >
            <ImageView
                android:contentDescription="@string/home"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_female"
                app:tint="@color/white"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dona"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textColor="@color/textColor"
                android:layout_marginTop="20dp"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvHeight"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cvMale"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cvWeight"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/card"
            android:gravity="center"
            android:orientation="vertical"
            >
            <TextView
                android:text="@string/pes"
                android:textAllCaps="true"
                android:textSize="26sp"
                android:textColor="@color/textColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/tvHeight"
                android:text="@string/default_inches"
                android:textSize="26sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />
            <SeekBar
                android:id="@+id/sbHeight"
                android:layout_height="30dp"
                android:layout_width="match_parent"
                android:layout_margin="20dp"
                android:max="140"
                android:progress="70"
                android:progressTint="@color/purpleColor"
                android:thumbTint="@color/purpleColor"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvWeight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cvAge"
        app:layout_constraintTop_toBottomOf="@id/cvHeight"
        app:layout_constraintBottom_toTopOf="@+id/btCalculate"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:background="@color/card"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textColor="@color/textColor"

                />
            <TextView
                android:id="@+id/tvWeightDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_default"
                android:textSize="50sp"
                android:textColor="@color/white"
                android:textStyle="bold"

                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <Button
                    android:id="@+id/btnWeightSub"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:text="@string/minus"
                    android:textColor="@color/white"
                    app:cornerRadius="30dp"
                    android:textSize="25sp"
                    app:backgroundTint="@color/buttonColor"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/btnWeightAdd"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:text="@string/plus"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    app:cornerRadius="30dp"
                    app:backgroundTint="@color/buttonColor"
                    />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAge"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@+id/cvWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvHeight"
        app:layout_constraintBottom_toTopOf="@+id/btCalculate"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:background="@color/card"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textColor="@color/textColor"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_default"
                android:textSize="50sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <Button
                    android:id="@+id/btnAgeSub"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:text="@string/minus"
                    android:textColor="@color/white"
                    app:cornerRadius="30dp"
                    android:textSize="25sp"
                    app:backgroundTint="@color/buttonColor"
                    android:layout_marginEnd="8dp"/>

                <Button
                    android:id="@+id/btnAgeAdd"

                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:text="@string/plus"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    app:cornerRadius="30dp"
                    app:backgroundTint="@color/buttonColor"
                    />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/btCalculate"
        android:text="@string/calculate"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="top|center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/buttonColor"
        />
</androidx.constraintlayout.widget.ConstraintLayout>